{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 337,
  "lineage": "bbd8e6c2-3f54-e6a1-0dd9-3b4c2ac37c8f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a333c82ed7f4f28a",
            "association_id": "eipassoc-0502d5e0a8bdf6cde",
            "domain": "vpc",
            "id": "eipalloc-0a333c82ed7f4f28a",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-0b75ddffb6913a768",
            "private_dns": "ip-10-2-0-143.ca-central-1.compute.internal",
            "private_ip": "10.2.0.143",
            "public_dns": "ec2-35-183-253-213.ca-central-1.compute.amazonaws.com",
            "public_ip": "35.183.253.213",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_A"
            },
            "tags_all": {
              "Name": "eip_A"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a2a86d7eeadcfd2",
            "association_id": "eipassoc-0bd322e8e0292ea6e",
            "domain": "vpc",
            "id": "eipalloc-04a2a86d7eeadcfd2",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-08c30f29e1ac1fb56",
            "private_dns": "ip-10-2-1-29.ca-central-1.compute.internal",
            "private_ip": "10.2.1.29",
            "public_dns": "ec2-35-183-73-109.ca-central-1.compute.amazonaws.com",
            "public_ip": "35.183.73.109",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_B"
            },
            "tags_all": {
              "Name": "eip_B"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511684210813:internet-gateway/igw-064b34750ce772ac9",
            "id": "igw-064b34750ce772ac9",
            "owner_id": "511684210813",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0c14a5cd4d078e128"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "wordpress-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:511684210813:loadbalancer/app/wordpress-alb/024785076261cbfb",
            "arn_suffix": "app/wordpress-alb/024785076261cbfb",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "wordpress-alb-1668182184.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:511684210813:loadbalancer/app/wordpress-alb/024785076261cbfb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wordpress-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e46155d3873f5f2b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04b2a55575344e718"
              },
              {
                "subnet_id": "subnet-0fa6b8e16e052968f"
              }
            ],
            "subnets": [
              "subnet-04b2a55575344e718",
              "subnet-0fa6b8e16e052968f"
            ],
            "tags": {
              "Name": "wordpress-alb"
            },
            "tags_all": {
              "Name": "wordpress-alb"
            },
            "vpc_id": "vpc-0c14a5cd4d078e128",
            "xff_header_processing_mode": "append",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "aws_security_group.wp_load_balancer",
            "aws_subnet.public_subnet_a",
            "aws_subnet.public_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "wordpress-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:511684210813:listener/app/wordpress-alb/024785076261cbfb/9a390c4dca9d7102",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:511684210813:targetgroup/Wordpress-TargetGroup/4ed04a342b24984d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:511684210813:listener/app/wordpress-alb/024785076261cbfb/9a390c4dca9d7102",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:511684210813:loadbalancer/app/wordpress-alb/024785076261cbfb",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.wordpress-alb",
            "aws_lb_target_group.wordpress-targetgroup",
            "aws_security_group.wp_load_balancer",
            "aws_subnet.public_subnet_a",
            "aws_subnet.public_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress-targetgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:511684210813:targetgroup/Wordpress-TargetGroup/4ed04a342b24984d",
            "arn_suffix": "targetgroup/Wordpress-TargetGroup/4ed04a342b24984d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/phpinfo.php",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:511684210813:targetgroup/Wordpress-TargetGroup/4ed04a342b24984d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ca-central-1:511684210813:loadbalancer/app/wordpress-alb/024785076261cbfb"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Wordpress-TargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c14a5cd4d078e128"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a333c82ed7f4f28a",
            "association_id": "eipassoc-0502d5e0a8bdf6cde",
            "connectivity_type": "public",
            "id": "nat-013b15ece0930d3a8",
            "network_interface_id": "eni-0b75ddffb6913a768",
            "private_ip": "10.2.0.143",
            "public_ip": "35.183.253.213",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fa6b8e16e052968f",
            "tags": {
              "Name": "gw_NAT_A"
            },
            "tags_all": {
              "Name": "gw_NAT_A"
            }
          },
          "dependencies": [
            "aws_eip.eip_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a2a86d7eeadcfd2",
            "association_id": "eipassoc-0bd322e8e0292ea6e",
            "connectivity_type": "public",
            "id": "nat-0bc1a2913056b0a66",
            "network_interface_id": "eni-08c30f29e1ac1fb56",
            "private_ip": "10.2.1.29",
            "public_ip": "35.183.73.109",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04b2a55575344e718",
            "tags": {
              "Name": "gw_NAT_B"
            },
            "tags_all": {
              "Name": "gw_NAT_B"
            }
          },
          "dependencies": [
            "aws_eip.eip_b",
            "aws_subnet.public_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511684210813:route-table/rtb-021de305a5daa02f1",
            "id": "rtb-021de305a5daa02f1",
            "owner_id": "511684210813",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-064b34750ce772ac9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "igw_route_table"
            },
            "tags_all": {
              "Name": "igw_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c14a5cd4d078e128"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ngw_route_table_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511684210813:route-table/rtb-0d24a90c1259cbf47",
            "id": "rtb-0d24a90c1259cbf47",
            "owner_id": "511684210813",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-013b15ece0930d3a8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ngw_route_table_A"
            },
            "tags_all": {
              "Name": "ngw_route_table_A"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c14a5cd4d078e128"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_a",
            "aws_nat_gateway.ngw_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ngw_route_table_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511684210813:route-table/rtb-001738f673f7eb894",
            "id": "rtb-001738f673f7eb894",
            "owner_id": "511684210813",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bc1a2913056b0a66",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ngw_route_table_B"
            },
            "tags_all": {
              "Name": "ngw_route_table_B"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c14a5cd4d078e128"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_b",
            "aws_nat_gateway.ngw_b",
            "aws_subnet.public_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_application_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a38418ce860b268e",
            "route_table_id": "rtb-0d24a90c1259cbf47",
            "subnet_id": "subnet-0f5795bcb16174de9"
          },
          "dependencies": [
            "aws_eip.eip_a",
            "aws_nat_gateway.ngw_a",
            "aws_route_table.ngw_route_table_A",
            "aws_subnet.application_subnet_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_application_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c47ac09601ac7fec",
            "route_table_id": "rtb-001738f673f7eb894",
            "subnet_id": "subnet-01a1d9fc64ba4510a"
          },
          "dependencies": [
            "aws_eip.eip_b",
            "aws_nat_gateway.ngw_b",
            "aws_route_table.ngw_route_table_B",
            "aws_subnet.application_subnet_b",
            "aws_subnet.public_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8dc4e493fb1f503",
            "route_table_id": "rtb-021de305a5daa02f1",
            "subnet_id": "subnet-0fa6b8e16e052968f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.igw_route_table",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae5b2a8746e73c00",
            "route_table_id": "rtb-021de305a5daa02f1",
            "subnet_id": "subnet-04b2a55575344e718"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.igw_route_table",
            "aws_subnet.public_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511684210813:security-group/sg-00af8e5074b9071a3",
            "description": "Database instance security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00af8e5074b9071a3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": " MySQL/Aurora which allows traffic on port 3306 from Custom source WP Database Clients security group.",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00a6519381e7d5ad2"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "WP Database",
            "name_prefix": "",
            "owner_id": "511684210813",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WP_Database"
            },
            "tags_all": {
              "Name": "WP_Database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c14a5cd4d078e128"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.wp_db_clients",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_db_clients",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511684210813:security-group/sg-00a6519381e7d5ad2",
            "description": "Security group for Wordpress Database clients",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a6519381e7d5ad2",
            "ingress": [],
            "name": "WP Database Clients",
            "name_prefix": "",
            "owner_id": "511684210813",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WP_Database_Clients"
            },
            "tags_all": {
              "Name": "WP_Database_Clients"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c14a5cd4d078e128"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511684210813:security-group/sg-05cad5e633032d726",
            "description": "WP EFS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05cad5e633032d726",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS TCP port 2049 for EFS share",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dde606127589b54b"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "WP EFS",
            "name_prefix": "",
            "owner_id": "511684210813",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WP EFS security group"
            },
            "tags_all": {
              "Name": "WP EFS security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c14a5cd4d078e128"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.wp_efs_clients",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_efs_clients",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511684210813:security-group/sg-0dde606127589b54b",
            "description": "Security group for WP EFS Clients",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dde606127589b54b",
            "ingress": [],
            "name": "WP EFS Clients",
            "name_prefix": "",
            "owner_id": "511684210813",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WP_EFS_Clients"
            },
            "tags_all": {
              "Name": "WP_EFS_Clients"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c14a5cd4d078e128"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511684210813:security-group/sg-0e46155d3873f5f2b",
            "description": "WP Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e46155d3873f5f2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "99.251.238.23/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WP Load Balancer",
            "name_prefix": "",
            "owner_id": "511684210813",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WP load balancer"
            },
            "tags_all": {
              "Name": "WP load balancer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c14a5cd4d078e128"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_web_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511684210813:security-group/sg-001af6cdb50d017c6",
            "description": "WP web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001af6cdb50d017c6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e46155d3873f5f2b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WP web server",
            "name_prefix": "",
            "owner_id": "511684210813",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WP web server"
            },
            "tags_all": {
              "Name": "WP web server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c14a5cd4d078e128"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.wp_load_balancer",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "application_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511684210813:subnet/subnet-0f5795bcb16174de9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5795bcb16174de9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511684210813",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application Subnet A"
            },
            "tags_all": {
              "Name": "Application Subnet A"
            },
            "vpc_id": "vpc-0c14a5cd4d078e128"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "application_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511684210813:subnet/subnet-01a1d9fc64ba4510a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.2.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a1d9fc64ba4510a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511684210813",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application Subnet B"
            },
            "tags_all": {
              "Name": "Application Subnet B"
            },
            "vpc_id": "vpc-0c14a5cd4d078e128"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511684210813:subnet/subnet-0f4e2cfbb4d5a97cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.2.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4e2cfbb4d5a97cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511684210813",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Data Subnet A"
            },
            "tags_all": {
              "Name": "Data Subnet A"
            },
            "vpc_id": "vpc-0c14a5cd4d078e128"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511684210813:subnet/subnet-0d00e79d27b4aba3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.2.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d00e79d27b4aba3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511684210813",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Data Subnet B"
            },
            "tags_all": {
              "Name": "Data Subnet B"
            },
            "vpc_id": "vpc-0c14a5cd4d078e128"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511684210813:subnet/subnet-0fa6b8e16e052968f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa6b8e16e052968f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511684210813",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet A"
            },
            "tags_all": {
              "Name": "Public Subnet A"
            },
            "vpc_id": "vpc-0c14a5cd4d078e128"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511684210813:subnet/subnet-04b2a55575344e718",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b2a55575344e718",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511684210813",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet B"
            },
            "tags_all": {
              "Name": "Public Subnet B"
            },
            "vpc_id": "vpc-0c14a5cd4d078e128"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511684210813:vpc/vpc-0c14a5cd4d078e128",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0d29edacfbed03d59",
            "default_route_table_id": "rtb-0fbdeaec59a21f4aa",
            "default_security_group_id": "sg-0567435637adcbbc5",
            "dhcp_options_id": "dopt-0840b5766f7c44ce9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c14a5cd4d078e128",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fbdeaec59a21f4aa",
            "owner_id": "511684210813",
            "tags": {
              "Name": "Project VPC"
            },
            "tags_all": {
              "Name": "Project VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511684210813:security-group-rule/sgr-04be83572da4ff1b4",
            "cidr_ipv4": "99.251.238.23/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-04be83572da4ff1b4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e46155d3873f5f2b",
            "security_group_rule_id": "sgr-04be83572da4ff1b4",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.wp_load_balancer",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}